--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>Unmasking the Devil</h1>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://kniinuma.github.io/UnmaskingTheDevil/</title>
+<meta http-equiv="refresh" content="0; https://kniinuma.github.io/UnmaskingTheDevil/">
+<link rel="canonical" href="https://kniinuma.github.io/UnmaskingTheDevil/">
+
